--- a/index.css
+++ b/index.css
@@ -62,6 +62,9 @@ a.button {
     transition: box-shadow 0.1s ease;
     text-transform: uppercase;
 }
+a.button i.fa {
+    margin-right: 0.5em;
+}
 a.button:hover {
     text-decoration: none;
     box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.12), 0 3px 6px 0 rgba(0, 0, 0, 0.18); 
@@ -212,7 +215,7 @@ section h1 + hr {
     position: relative;
 }
 .job.hide {
-    max-height: 14em;
+    max-height: 26em;
     overflow: hidden;
     margin-bottom: -0.5em;
 }
@@ -222,8 +225,7 @@ section h1 + hr {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 5.5em;
-    background: #fff;
+    height: 15.4em;
     background: -moz-linear-gradient(top, #fff 0%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 100%);
     background: -webkit-linear-gradient(top, #fff 0%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 100%);
     background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.5) 50%, #fff 100%);
@@ -232,11 +234,14 @@ section h1 + hr {
 .job h1 {
     opacity: 0.9;
 }
-.job h1 a.button {
-    font-size: 1.5rem;
+.job h1 a {
+    font-size: 1.8rem;
     position: relative;
     top: -0.5rem;
     margin-left: 1rem;
+}
+.job h1 a i.fa {
+    margin-right: 0.4em;
 }
 .job h2 {
     font-size: 1.2em;
