--- a/index.css
+++ b/index.css
@@ -30,6 +30,9 @@ a {
 a:hover {
     text-decoration: underline;
 }
+emph {
+    font-weight: 400;
+}
 
 /* Logo */
 
@@ -43,12 +46,6 @@ a:hover {
 }
 .logo > span {
     font-weight: 200;
-}
-
-/* Call to action */
-
-#c2a-contact, #c2a-positions {
-    text-align: center;
 }
 
 /* Button */
@@ -114,21 +111,19 @@ a.button.dark {
 
 /* Sections */
 
-section {
-    margin: 7rem 0;
-    padding: 1vw 0;
-}
-section > .container > *:not(:first-child) {
-    margin-top: 7rem;
-    padding-top: 1vw;
-}
 section .title {
     display: flex;
     align-items: center;
+    margin: 7rem 0;
+    padding: 1vw 0;
 }
-section h1 {
+section#contact {
+    margin-bottom: 7rem;
+    padding-bottom: 1vw;
+}
+section .title h1 {
     display: inline-block;
-    font-size: 3.2rem;
+    font-size: 2.8rem;
     font-weight: 300;
     opacity: 0.22;
     margin-right: 0.5em;
@@ -146,17 +141,31 @@ section h1 + hr {
 /* Hero */
 
 #hero {
-    margin: 8vw 0 4vw 0;
-    padding: 6rem 0 2rem 0;
-    text-align: center;
+    margin-top: 1vw;
+    padding-top: 9.5rem;
+    padding-bottom: 8.5rem;
 }
-#hero .logo { font-size: 7.5rem; line-height: 1 }
+#tagline {
+    margin-top: 1vw;
+    padding-bottom: 8.5rem;
+}
+#c2a {
+    margin-top: 1vw;
+    padding-bottom: 3.5rem;
+}
+
+#hero { text-align: center; }
+#hero .logo { font-size: 8.5rem; line-height: 1 }
 #hero .logo:hover { text-decoration: none; }
 #hero nav a { font-size: 2.2rem; }
-#tagline p { font-size: 3.2rem; }
-#tagline {
-    margin-top: 4vw 0;
-    padding-top: 0;
+#tagline p { font-size: 2.8rem; }
+#c2a .contact { text-align: center; }
+#c2a .contact p { opacity: 0.3; margin-bottom: 0.5em; }
+
+/* About */
+
+#about p:not(:first-child) {
+    margin-top: 1em;
 }
 
 /* Team */
@@ -166,8 +175,8 @@ section h1 + hr {
     flex-wrap: wrap;
     justify-content: center;
     /* Negative 1rem margin from top and bottom. */
-    margin-top: 5rem;
-    margin-bottom: -2rem;
+    margin-top: -1rem;
+    margin-bottom: -1rem;
 }
 #team .people .person {
     display: flex;
@@ -210,45 +219,35 @@ section h1 + hr {
 
 /* Open positions */
 
-.job {
-    text-align: left;
-    position: relative;
+.jobs .job:not(:first-child) {
+    margin-top: 2.4em;
 }
-.job.hide {
-    max-height: 26em;
-    overflow: hidden;
-    margin-bottom: -0.5em;
+.job.hide .description {
+    display: none;
 }
-.job.hide > .fade-out {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 15.4em;
-    background: -moz-linear-gradient(top, #fff 0%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 100%);
-    background: -webkit-linear-gradient(top, #fff 0%, rgba(255, 255, 255, 0.5) 50%, rgba(255, 255, 255, 0) 100%);
-    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.5) 50%, #fff 100%);
-    cursor: pointer;
+.job > h1 {
+    font-size: 2.2rem;
+    font-weight: 300;
 }
-.job h1 {
-    opacity: 0.9;
+.job h1 span {
+    display: none;
+    opacity: 0.35;
+    margin-left: 1.4rem;
 }
 .job h1 a {
-    font-size: 1.8rem;
-    position: relative;
-    top: -0.5rem;
-    margin-left: 1rem;
+    font-size: 1.7rem;
+    margin-left: 1.4rem;
 }
 .job h1 a i.fa {
-    margin-right: 0.4em;
+    margin-left: 0.4em;
+    font-size: 0.68em;
 }
 .job h2 {
-    font-size: 1.2em;
+    font-size: 1em;
     font-weight: 400;
     opacity: 0.9;
 }
-.job h2:not(:first-child) {
+.job h2 {
     margin-top: 1.5em;
 }
 .job p {
